# palera1n

./: .editorconfig  .gitignore  .gitmodules  .palera1n.sh.swp  CHANGELOG.md  CMakeLists.txt  COMMONISSUES.md  LICENSE  Makefile  README.md  boot.txt  boot2.txt  checkra1n.h  commonissues.md  download_deps.sh  flags.md  kerneldiff.py  main.sh  mandoc.css  modes.csv  palera1n.1  palera1n.sh  sileosafemode  start.sh  test.sh  version  xxd-embedded.h
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: basic.yml  config.yml  feature.yml  issue.md  problem.yml
.github/workflows/: build-linux.yml  build.yml  cmake-single-platform.yml  submodule.yml
binaries/: Kernel15Patcher.ios  Kernel16Patcher-nolivefs.ios  Kernel16Patcher.ios  checkra1n-kpf-pongo  dtpatcher  gaster  kpf.ios  postboot.sh  postbootnosub.sh  preptweaks.sh
binaries/.licenses/: jq_LICENSE  xcbuild_LICENSE
binaries/Darwin/: Kernel64Patcher  ampblocker  gaster  gtar  hfsplus  iBoot64Patcher  iBoot64Patcherfsboot  iBootpatch2  ideviceenterrecovery  ideviceinfo  img4  img4tool  inetcat  iproxy  irecovery  jq  pongoterm  pzb  sshpass
binaries/Linux/: Kernel64Patcher  PlistBuddy  hfsplus  iBoot64Patcher  iBoot64Patcherfsboot  iBootpatch2  ideviceenterrecovery  ideviceinfo  inetcat  iproxy  irecovery  jq  pongoterm  pzb  sshpass
binaries/Linux/aarch64/: Kernel64Patcher  iBoot64Patcher  img4  iproxy  irecovery  jq  sshpass
binaries/Linux/x86_64/: iproxy  irecovery  sshpass
docs/: CMakeLists.txt  Makefile  p1ctl.8  palera1n.1
gum/: flags.md  modes.csv
include/: ANSI-color-codes.h  common.h  design.h  gui.h  kerninfo.h  paleinfo.h  palerain.h  tui.h  xxd-embedded.h
include/lz4/: lz4.h
other/: blobsbootlogo.img4  bootlogo.im4p  checkra1n-kpf-pongo
other/blobs/: 0x7000.shsh  0x8010.shsh  0x8015.shsh
other/rootfs/jbin/: haxx  jb.dylib  jbinit  jbloader  launchd  post.sh
packaging/: control  control.macosx
packaging/gui/: homebrew  palera1n.desktop
patches/: 0001-Allow-empty-x509-cert-issuer.patch  d20.bpatch  d21.bpatch  d221.bpatch  j120.bpatch  j128.bpatch  j82.bpatch
patches/gpm/: 001_missing_V_option.patch  010_ps2_rework.patch  014_has_mouse_control.patch  031_max_consoles.patch  080_cross-compile.patch  092_fix-format-not-a-string-literal-and-no-format-arguments.patch  093_fix-typos.patch  094_gpm-1.20.7-glibc-2.26-1.patch  095_fix-compilation-with-gcc-10.patch  096_fix-compilation-against-musl-libc.patch
patches/libimobiledevice/: 0001-set-subject-issuer-name.patch
patches/mbedtls/: 0001-Allow-empty-x509-cert-issuer.patch
resources/: Info.plist  ios-entitlements.xml
rootfs/jbin/: jb.dylib  launchd
rootfs/palera1n/: jbloader
rootfs/palera1n/bootstrap/: safemode.deb  sileo.deb
rootless/: deploy.sh
rootless/src/iphoneos-arm64/: install.sh
shsh/: 0x8000.shsh  0x8001.shsh  0x8003.shsh  0x8012.shsh  0x8960.shsh
src/: CMakeLists.txt  Makefile  boyermoore_memmem.c  checkm8.c  chkstk.S  common.h  credits.c  devhelper.c  dfuhelper.c  exec_checkra1n.c  fake_embedded.c  gui_alerts.cpp  gui_design.cpp  gui_device.cpp  gui_main.cpp  kerninfo.h  lock_vars.c  lockdown_helper.c  lockdown_helper.h  log.c  main.c  main.cpp  optparse.c  override_file.c  palera1n  pongo_helper.c  pongo_usb.c  tui_devhelper.c  tui_input.c  tui_main.c  tui_screen_enter_dfu.c  tui_screen_enter_recovery.c  tui_screen_jailbreak.c  tui_screen_main.c  tui_screen_options.c  usb.xml  usb_iokit.c  usb_libusb.c  window.c
src/lz4/: lz4.c  lz4hc.c
src/palera1n/: credits.c  dfuhelper.c  exec_checkra1n.c  fake_embedded.c  main.c  tui_screen_enter_recovery.c  tui_screen_main.c  usb_iokit.c
src/ui/: app.cpp  app.hpp
src/utils/: constants.cpp  constants.h  log.h  paleinfo.h
